# sven-experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py  submit_experiment.sh  submit_seed_sweep.sh
agent_lab/: AGENT.md  launch.sh  notes.md  orchestrator_prompt.md  report.md  taskboard.md
agent_lab/problems/: classification_vs_regression.md  template.md
agent_lab/roles/: engineer.md  manager.md  scientist.md
agent_lab/scripts/: plot_utils.py  (+1 more)
analysis/: comparisons.ipynb  implicit_regularization_analysis.ipynb  implicit_regularization_report.md  microbatch_analysis.ipynb  mnist_analysis.ipynb  mnist_analysis_labelRegression.ipynb  paramfrac_analysis.ipynb  style.py
claude_experiments/: .gitignore  cifar10_paper_plots_rmsProp.ipynb  mnist_paper_plots.ipynb  mnist_paper_plots_noRmsProp.ipynb  mnist_paper_plots_rmsProp.ipynb  polynomial_paper_plots.ipynb  toy_1d_paper_plots.ipynb
experiments/: run_experiment.py
notebooks/: .gitignore  download_datasets.ipynb  jax_svd.ipynb  mnist_optimiser_comparison.ipynb  torch_svd.ipynb  torch_svd_cifar10.ipynb  torch_svd_cifar10_mlp.ipynb  torch_svd_mnist.ipynb  torch_svd_polynomial.ipynb  toy_1d_regression.ipynb  toy_1d_scan_dashboard.py
notebooks_new/: .gitignore  cifar10_testing.ipynb  iris_classification.ipynb  linear_model_hessian.ipynb  mnist_distillation.ipynb  mnist_hessian.ipynb  mnist_scan.ipynb  mnist_testing.ipynb  polynomial_scan.ipynb  polynomial_testing.ipynb  toy_1d_regression.ipynb  toy_1d_testing.ipynb  toy_classification.ipynb  toy_classification_regression.ipynb
(+81 files in other folders)
