[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sv3"
version = "0.1.0"
authors = [{name="Sam Bright-Thonney", email="sambt@mit.edu"}]
description = "SV3 package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "hydra-core>=1.3.2",
    "pandas>=2.0",
    "panel>=1.4",
    "plotly>=5.0",
]

[tool.setuptools]
packages = ["sv3"]
